# allgair-bachelor

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.py  main.cpp  output.txt
geometry/: line.cpp  line.h  plane.cpp  plane.h  polygon.cpp  polygon.h  status_codes.h  utils.cpp  utils.h  vector.cpp  vector.h
python/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  raytracing_pybind.cpp  test.py
src/: coord.h  main.cpp  ray.h  shared.cpp  shared.h  status_codes.h  utils.cpp  utils.h
src/config/: config.cpp  config.h  config_datatypes.txt  datatype_check.h  global_config.cpp  global_config.h
src/exceptions/: exception.cpp  exception.h
src/geometry/: line.cpp  line.h  plane.cpp  plane.h  polygon.cpp  polygon.h  speed_test  speed_test.cpp  vector.cpp  vector.h
src/geotiff/: tile.cpp  tile.h
src/gml/: gmlfile.cpp  gmlfile.h
src/lib/: UTM.cpp  UTM.h  utm  utm.c
src/precalc/: fresnel_zone.cpp  fresnel_zone.h  precalc.cpp  precalc.h  signal_cone.cpp  signal_cone.h
src/raw_data/: geotiff.cpp  geotiff.h  gmlfile.cpp  gmlfile.h  surface.cpp  surface.h
src/raycasting/grid/: bresenham.cpp
src/raytracing/: field.cpp  field.h  fresnel_zone.cpp  fresnel_zone.h  raytracer.cpp  raytracer.h  raytracing.cpp  raytracing.h  raytracing_pybind.cpp  result_output.cpp  result_output.h  selection_methods.h
src/tile/: field.cpp  field.h  grid_tile.cpp  grid_tile.h  load_tile.cpp  load_tile.h  masker.cpp  masker.h  tile_name.cpp  tile_name.h  tile_types.h  vector_tile.cpp  vector_tile.h
src/web/: download.cpp  download.h  urls.cpp  urls.h
tests/: line_test.h  plane_test.h  polygon_test.h  test.cpp  vector_test.h
